--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="content">
             <article class="topcontent">
                 <header>
-                    <h2><a href="#" title="first post">Dagorhir Empire of the Southern Star</h2>
+                    <h2><title="first post">Dagorhir Empire of the Southern Star</h2>
                         <p>Sandidar is the name our Dagorhir group uses, there are many other groups all over the country and even many scattered across the world.
 
 Dagorhir Battle Games combines fast-paced full-contact combat simulation with elements of live action role-playing. It also combines elements of both history and fantasy, because of this it is not uncommon to see a Roman Legionary do battle against an orc chieftain. Dagorhir is both a sport and a game allowing for people of many different backgrounds, ages, and hobbies to come together and have fun.
